--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,12 @@
 @import './base.css';
+@import 'primeicons/primeicons.css';
 
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+  font-family: serif;
 }
 
 a,
